Changes to Version 1.9-0

  o Improvements to boxplot dialog.

  o Improvements to save graphs dialogs (adapting suggestions of Milan Bouchet-Valat).

  o Added data import from SAS xport files (suggestion of Peter Mandeville).

  o Added ability to import Excel data sets generally via XLConnect package (suggestion of Michael Weylandt, only for Windows at this point).

  o Updated French translation (thanks to Milan Bouchet-Valat).

Changes to Version 1.8-5

  o New Polish translation (courtesy of Lukasz Daniel).
  
  o Small GUI improvements (suggestions/code of Milan Bouchet-Valat).
  
  o globalVariables() invoked for R 2.15.1 and above.
  
  o Added standard button icons.
   
Changes to Version 1.8-4

  o Fixes to Italian translation (from Stefano Calza).
  
  o Updated Korean translation (courtesy of Shin Jong-Hwa).
  
  o Fixed bug in numSummary() that surfaced when only one quantile was specified (reported by Peter B. Mandeville).
  
  o Titles for sets of check boxes now left-aligned (suggestion of Milan Bouchet-Valat).
  
  o Fix to Spanish translation (courtesy of Manuel Munoz Marquez).
  
  o Fix to data set edit button, which was removing case names (reported by Gilles Le Pape).
  
  o Updated Slovenian translations (courtesy of Jaro Lajovic and Matjaz Jeran).
  
  o Updated Korean translation (courtesy of Shin Jong-Hwa).
  
  o Rcmdr now detects when it is running under RStudio and arranges to display graphs properly. There is still an open bug causing a freeze in the RStudio graphics device when points are identified in a graph.

Changes to Version 1.8-3

   o Small fixes to pass CRAN checks (reported by Kurt Hornik).

Changes to Version 1.8-2

   o Fixes to font selection, especially for non-Windows systems.
   
   o Fix to groupsBox() utility function (to fix bug reported by Richard Heiberger).
   
   o PDF files for "Getting Started" manual in English, Japanese, and Spanish compacted (suggestion of Brian Ripley).
   